--- a/app/views/smartrent/admin/residents/show.html.erb
+++ b/app/views/smartrent/admin/residents/show.html.erb
@@ -92,6 +92,9 @@
     <div class="col-md-4 resident-box resident-right-col password-change-form-box">
       <%= render partial: "password_change_form" %>
     </div>
+    <div class="col-md-10 resident-box">
+      <%= render partial: "smartrent_history" %>
+    </div>
   </div>
 
 
