--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -32,13 +32,13 @@
 
       <% if !request.fullpath.include? "sign_in" %>
         <div class="memberInfo">
-          <% if !user_signed_in? %>
+          <% if !resident_signed_in? %>
           <div id="loginFields">
             <div class="title">
               Resident Log-In
             </div>
             <div class="loginForm">
-              <%= form_for(:user, url: session_path(:user)) do |f| %>
+              <%= form_for(:resident, url: session_path(:resident)) do |f| %>
                 <div class="form-group">
                   <%= f.email_field :email, autofocus: false , :class => "form-control"%>
                 </div>
@@ -50,8 +50,8 @@
                   <%= f.submit "Go", {:class => "btn btn-primary btn-sm"} %>
                 </div>
               <% end %>
-              <%= link_to "Forgot your password?", new_password_path(:user) %><br />
-              <%= link_to "Activate Your Account", new_unlock_path(:user) %><br />
+              <%= link_to "Forgot your password?", new_password_path(:resident) %><br />
+              <%= link_to "Activate Your Account", new_unlock_path(:resident) %><br />
               </div>
           </div>
         <% else %>
@@ -59,7 +59,7 @@
             Logged-In
           </div>
           <div class="name">
-            <%= current_user.name %>
+            <%= current_resident.name %>
           </div>
           <div class="links">
             <div class="link">
@@ -71,11 +71,11 @@
             </div>
 
             <div class="link">
-              <%= link_to "Reset Password", edit_user_password_path  %>
+              <%= link_to "Reset Password", change_password_residents_path  %>
             </div>
 
             <div class="link">
-              <%= link_to "Logout", destroy_user_session_path  %>
+              <%= link_to "Logout", destroy_resident_session_path  %>
             </div>
           </div>
         <% end %>
