--- a/app/views/layouts/smartrent/_admin_header.html.erb
+++ b/app/views/layouts/smartrent/_admin_header.html.erb
@@ -8,5 +8,12 @@
         <span class="icon-bar"></span>
       </button>
     </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <% if admin_user_signed_in? %>
+        <%= link_to "Logout", destroy_admin_user_session_path, :class => "btn btn-danger pull-right"  %>
+      <% else %>
+        <%= link_to "Login", new_session_path(:admin_user), :class => "btn btn-success pull-right"  %>
+      <% end %>
+    </div>
   </div>
 </nav>
