--- a/app/views/smartrent/properties/index.html.erb
+++ b/app/views/smartrent/properties/index.html.erb
@@ -53,6 +53,7 @@
             </div>
           </div>
         <% end %>
+          <%= will_paginate @properties, renderer: BootstrapPagination::Rails %>
       </div>
       <div id="map" class="results map-results"></div>
     </div>
