--- a/app/views/smartrent/admin/residents/index.html.erb
+++ b/app/views/smartrent/admin/residents/index.html.erb
@@ -21,7 +21,7 @@
       <td><%= resident.name %></td>
       <td><%= resident.email %></td>
       <td><%= resident.apartment.title if resident.apartment %></td>
-      <td><%= resident.status %></td>
+      <td><%= resident.status_text %></td>
       <td><%= link_to 'Show', admin_resident_path(resident) %> | <%= link_to 'Edit', edit_admin_resident_path(resident) %> | <%= link_to 'Destroy', admin_resident_path(resident), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
