--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -23,8 +23,8 @@
       <div class="answer">
         <p>A: SmartRent is Bozzuto’s incentive program that gives you the
         opportunity to earn *$350 per month credit for the time you rent at
-        <%= link_to "participating Bozzuto-managed apartment properties", new_home_path %>. It gives you access to
-        automatically-accrued funds towards the purchase of a new <%= link_to "Bozzuto Home", new_home_path %>.</p>
+        <%= link_to "participating Bozzuto-managed apartment properties", find_a_new_home_path %>. It gives you access to
+        automatically-accrued funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %>.</p>
       </div>
     </div>
   </div>
@@ -37,14 +37,14 @@
     <div class="qa">
       <div class="question">
         <p>What is the maximum amount of money I can earn toward a purchase of
-        a new <%= link_to "Bozzuto Home", new_home_path %> by registering in the SmartRent Program?</p>
+        a new <%= link_to "Bozzuto Home", find_a_new_home_path %> by registering in the SmartRent Program?</p>
       </div>
 
       <div class="answer">
         <p>A: Renters at specific Bozzuto-managed properties that participate
         in the SmartRent program will earn $350 per month toward the purchase
         of a new home up to a maximum of $10,000. Visit the <%= link_to "Find a
-        SmartRent Apartment", apartments_path %> page to see which Bozzuto properties
+        SmartRent Apartment", find_apartments_path %> page to see which Bozzuto properties
         participate in the SmartRent program.</p>
       </div>
     </div>
@@ -58,7 +58,7 @@
     <div class="qa">
       <div class="question">
         <p>I have been renting at a <%= link_to "Bozzuto-managed
-        community", apartments_path %> for some time and it offers the SmartRent program. What
+        community", find_apartments_path %> for some time and it offers the SmartRent program. What
         happens to those funds?</p>
       </div>
 
@@ -67,7 +67,7 @@
         accrue funds. Once you activate your online account on this website
         with the e-mail address used on your lease, you can view your
         accumulated funds in your SmartRent profile. You are eligible to use
-        these funds towards the purchase of a new <%= link_to "Bozzuto Home", new_home_path %> after
+        these funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %> after
         12 consecutive months of occupancy at a participating Bozzuto-managed
         apartment community.</p>
       </div>
@@ -124,7 +124,7 @@
       <div class="answer">
         <p>A: SmartRent funds may be used in conjunction with other promotional
         offered at certain Bozzuto Homes communities. Please check with the
-        sales manager at the <%= link_to "Bozzuto Homes", new_home_path %>
+        sales manager at the <%= link_to "Bozzuto Homes", find_a_new_home_path %>
         community of your choice for details.</p>
       </div>
     </div>
@@ -147,7 +147,7 @@
         reduce your monthly payments. They do not replace the required earnest
         money deposit funds at time of contract or interim deposits due during
         the purchase process. Please consult with the sales manager at the
-         <%= link_to "Bozzuto Homes", new_home_path %> community of your choice for details.</p>
+         <%= link_to "Bozzuto Homes", find_a_new_home_path %> community of your choice for details.</p>
       </div>
     </div>
   </div>
