--- a/app/views/smartrent/pages/_properties_slider.html.erb
+++ b/app/views/smartrent/pages/_properties_slider.html.erb
@@ -1,21 +1,21 @@
 <div id="slides">
   <div class="slides_container">
       <% i = 0 %>
-      <% properties = Smartrent::Property.all %>
-    <% properties.each do |property|%>
+      <% homes = Smartrent::Home.all %>
+    <% homes.each do |home|%>
       <% if i%3 == 0 %>
       <div class="threeWide">
       <% end %>
         <div class="propertySlide">
-          <%= link_to property_path(property) do %>
-            <%= image_tag property.image(:home_page) %>
+          <%= link_to home_path(home) do %>
+            <%= image_tag home.image(:home_page) %>
             <div class="caption">
-              <strong><%= property.title %></strong><%= property.home_page_desc %>
+              <strong><%= home.title %></strong><%= home.home_page_desc %>
             </div>
           <% end %>
         </div>
       <% i+=1 %>
-    <% if i%3 == 0 || i == properties.count %>
+    <% if i%3 == 0 || i == homes.count %>
       </div>
     <% end %>
     <% end %>
