--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -17,10 +17,10 @@
     <div id="homeContent">
       When you rent from a Bozzuto SmartRent apartment community, you earn a
       $350 credit every month - up to a total of $10,000 - to help you
-      purchase a new <%= link_to "condominium" ,new_home_path  %>,
-      <%= link_to "townhome", new_home_path %> or
-      <%= link_to "single-family home", new_home_path %>
-       from <%= link_to "Bozzuto Homes", new_home_path %>
+      purchase a new <%= link_to "condominium" ,find_a_new_home_path  %>,
+      <%= link_to "townhome", find_a_new_home_path %> or
+      <%= link_to "single-family home", find_a_new_home_path %>
+       from <%= link_to "Bozzuto Homes", find_a_new_home_path %>
       Simple as that. No gimmicks. Best of all, no cost to you, whether you
       choose to participate in SmartRent or not.
       <%= link_to "Click here to learn more.", faq_path  %>
