--- a/app/views/smartrent/properties/_layout.html.erb
+++ b/app/views/smartrent/properties/_layout.html.erb
@@ -1,10 +1,13 @@
 <div class="banner dropshadow">
   <div class="fixedWidth">
     <div class="images clearfix">
-      <div class="left"><%= image_tag "newHomeLeft.jpg" %></div>
-
-      <div class="right"><%= image_tag "newHome.jpg" %></div>
+      <div class="left">
+        <%= image_tag "apartmentsleft.jpg" %>
+      </div>
+      <div class="right">
+        <%= image_tag "apartments.jpg" %>
+      </div>
     </div>
   </div>
+  <%= yield %>
 </div>
-<%= yield %>
