--- a/app/views/smartrent/properties/edit.html.erb
+++ b/app/views/smartrent/properties/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing property</h1>
+<h1>Editing apartment</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @property %> |
-<%= link_to 'Back', properties_path %>
+<%= link_to 'Show', @apartment %> |
+<%= link_to 'Back', apartments_path %>
