--- a/app/views/smartrent/properties/new.html.erb
+++ b/app/views/smartrent/properties/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New property</h1>
+<h1>New apartment</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', properties_path %>
+<%= link_to 'Back', apartments_path %>
