--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -11,7 +11,7 @@
           <%= link_to "Why SmartRent?", smartrent.faq_path %>
         </li>
 
-        <li<% if @current_page == 'apartments'%> class="current_page_item"<% end %>>
+        <li<% if @current_page == 'properties'%> class="current_page_item"<% end %>>
           <%= link_to "Apartments", smartrent.find_apartments_path %>
         </li>
 
