--- a/app/views/smartrent/admin/residents/_form.html.erb
+++ b/app/views/smartrent/admin/residents/_form.html.erb
@@ -72,9 +72,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :apartment_id, :class => "col-md-2 control-label" %>
+      <%= f.label :property_id, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.collection_select :apartment_id, Smartrent::Apartment.all, :id, :title, {:include_blank => "--Select Apartment"}, {:class => "form-control input-md"} %>
+        <%= f.collection_select :property_id, Smartrent::Property.all, :id, :title, {:include_blank => "--Select Property--"}, {:class => "form-control input-md"} %>
       </div>
     </div>
     <div class="form-group">
