--- a/app/views/layouts/smartrent/_admin_header.html.erb
+++ b/app/views/layouts/smartrent/_admin_header.html.erb
@@ -14,9 +14,6 @@
         <li <%if @active == "homes"%>class="active"<% end %>>
           <%= link_to "Homes", admin_homes_path %>
         </li>
-        <li <%if @active == "properties"%>class="active"<% end %>>
-          <%= link_to "Properties", admin_properties_path %>
-        </li>
         <li <%if @active == "residents"%>class="active"<% end %>>
           <%= link_to "Residents", admin_residents_path %>
         </li>
@@ -26,16 +23,12 @@
         <li>
           <%= link_to "Website", root_path, :target => "_blank" %>
         </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <li class="<%if @active == "properties"%>active <% end %>dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Properties <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><%= link_to "Properties", admin_properties_path %></li>
+            <li><%= link_to "Features", admin_features_path %></li>
+            <li><%= link_to "Import Property Features", import_admin_property_features_path %></li>
           </ul>
         </li>
       </ul>
