--- a/app/views/layouts/smartrent/_admin_header.html.erb
+++ b/app/views/layouts/smartrent/_admin_header.html.erb
@@ -29,6 +29,7 @@
             <li><%= link_to "Properties", admin_properties_path %></li>
             <li><%= link_to "Features", admin_features_path %></li>
             <li><%= link_to "Import Property Features", import_admin_property_features_path %></li>
+            <li><%= link_to "Floor Plans", admin_floor_plans_path %></li>
           </ul>
         </li>
       </ul>
