--- a/app/views/smartrent/homes/_home_table.html.erb
+++ b/app/views/smartrent/homes/_home_table.html.erb
@@ -1,5 +1,5 @@
 <table class="homesTable">
-  <% homes.each do |home| %>
+  <% more_homes.each do |home| %>
     <tr>
       <td class="name"><%= home.name %></td>
       <td class="info"><%= home.beds %> Bedrooms / <%= home.baths %> Baths / <%= home.sq_ft %> sq. ft.</td>
