--- a/app/views/smartrent/homes/_featured_home_table.html.erb
+++ b/app/views/smartrent/homes/_featured_home_table.html.erb
@@ -1,12 +1,12 @@
-<table class="homesTable">
+<table class="more_homesTable">
   <tr>
-    <td class="name"><%= home.name %></td>
-    <td class="info"><%= home.beds %> Bedrooms / <%= home.baths %> Baths / <%= home.sq_ft %> sq. ft.</td>
+    <td class="name"><%= more_home.name %></td>
+    <td class="info"><%= more_home.beds %> Bedrooms / <%= more_home.baths %> Baths / <%= more_home.sq_ft %> sq. ft.</td>
   </tr>
   <tr>
     <td colspan="3">
       <div class="floorPlanImages">
-        <% home.floor_plan_images.each do |floor_plan_image| %>
+        <% more_home.floor_plan_images.each do |floor_plan_image| %>
           <%= render partial: "home_floor_plan_row", :locals => {:floor_plan_image => floor_plan_image} %>
         <% end %>
       </div>
