--- a/app/views/smartrent/admin/more_homes/index.html.erb
+++ b/app/views/smartrent/admin/more_homes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing more_homes</h1>
+<h1>Listing More Homes</h1>
 <div class="links pull-right">
   <%= link_to 'Import More Homes', import_admin_more_homes_path, :class => "btn btn-default" %>
   <%= link_to 'New More Home', new_admin_more_home_path, :class => "btn btn-primary" %>
@@ -14,7 +14,7 @@
       <th>Baths</th>
       <th>Sq ft</th>
       <th>Featured</th>
-      <th>Property</th>
+      <th>Home</th>
       <th>Actions</th>
     </tr>
   <% @more_homes.each do |more_home| %>
@@ -24,12 +24,12 @@
       <td><%= more_home.baths %></td>
       <td><%= more_home.sq_ft %></td>
       <td><%= more_home.featured %></td>
-      <td><%= more_home.property_id %></td>
-      <td><%= link_to 'Show', admin_more_home_path(more_home) %> | <%= link_to 'Edit', edit_more_home_path(more_home) %> | <%= link_to 'Destroy', admin_more_home_path(more_home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= more_home.home.title %></td>
+      <td><%= link_to 'Show', admin_more_home_path(more_home) %> | <%= link_to 'Edit', edit_admin_more_home_path(more_home) %> | <%= link_to 'Destroy', admin_more_home_path(more_home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
   </table>
   <%= will_paginate @more_homes, renderer: BootstrapPagination::Rails %>
 <% else %>
-  <div class="alert alert-warning">No more_homes have been added yet.</div>
+  <div class="alert alert-warning">No More Homes have been added yet.</div>
 <% end %>
