--- a/app/views/layouts/smartrent/_admin_header.html.erb
+++ b/app/views/layouts/smartrent/_admin_header.html.erb
@@ -12,7 +12,11 @@
     <% if admin_user_signed_in? %>
       <ul class="nav navbar-nav">
         <li <%if @active == "homes"%>class="active"<% end %>>
-          <%= link_to "Homes", admin_homes_path %>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Homes <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "Homes", admin_homes_path %></li>
+            <li><%= link_to "More Homes", admin_more_homes_path %></li>
+          </ul>
         </li>
         <li <%if @active == "residents"%>class="active"<% end %>>
           <%= link_to "Residents", admin_residents_path %>
