--- a/app/views/smartrent/admin/more_homes/_form.html.erb
+++ b/app/views/smartrent/admin/more_homes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:admin, @home], html: {:class => "form-horizontal"}) do |f| %>
+<%= form_for([:admin, @more_home], html: {:class => "form-horizontal"}) do |f| %>
   <% if @more_home.errors.any? %>
     <%= render partial: "shared/form_errors", :locals => {:errors => @more_home.errors} %>
   <% end %>
@@ -39,15 +39,15 @@
       <div class="form-group">
         <%= f.label :featured, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.text_field :featured, :class => "form-control input-md" %>
+          <%= f.check_box :featured, :class => "form-control input-md" %>
         </div>
       </div>
     </div>
     <div class="field">
       <div class="form-group">
-        <%= f.label :property_id, :class => "col-md-2 control-label" %>
+        <%= f.label :home_id, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.collection_select :property_id, Smartrent::Property.all, :id, :title, {:include_blank => "--Select Property--", :class => "form-control input-md"}, {}  %>
+          <%= f.collection_select :home_id, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"},{:class => "form-control input-md"}  %>
         </div>
       </div>
     </div>
