--- a/app/views/smartrent/admin/more_homes/edit.html.erb
+++ b/app/views/smartrent/admin/more_homes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing home</h1>
+<h1>Editing More Home</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @home %> |
-<%= link_to 'Back', homes_path %>
+<%= link_to 'Show', admin_more_home_path(@more_home) %> |
+<%= link_to 'Back', admin_more_homes_path %>
