--- a/app/views/layouts/smartrent/_admin_header.html.erb
+++ b/app/views/layouts/smartrent/_admin_header.html.erb
@@ -16,6 +16,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to "Homes", admin_homes_path %></li>
             <li><%= link_to "More Homes", admin_more_homes_path %></li>
+            <li><%= link_to "Floor Plan Images", admin_floor_plan_images_path %></li>
           </ul>
         </li>
         <li <%if @active == "residents"%>class="active"<% end %>>
