--- a/app/views/smartrent/admin/more_homes/new.html.erb
+++ b/app/views/smartrent/admin/more_homes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New home</h1>
+<h1>New More home</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', homes_path %>
+<%= link_to 'Back', admin_more_homes_path %>
