floor plan images on website finalized

--- a/app/views/smartrent/homes/show.html.erb
+++ b/app/views/smartrent/homes/show.html.erb
@@ -42,7 +42,7 @@
             <div class="title">
               Featured Home
             </div>
-            <%= render partial: "featured_home_table", :locals => {:home => featured_home} %>
+            <%= render partial: "featured_home_table", :locals => {:more_home => featured_home} %>
           </div>
         <% end %>
       <% end %>
