--- a/app/views/smartrent/admin/residents/show.html.erb
+++ b/app/views/smartrent/admin/residents/show.html.erb
@@ -93,7 +93,7 @@
       <%= render partial: "password_change_form" %>
     </div>
     <div class="col-md-10 resident-box">
-      <%= render partial: "smartrent_history" %>
+      <%= render partial: "rewards" %>
     </div>
   </div>
 
