--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -83,6 +83,12 @@
         </div>
       </div>
     </div>
+    <div class="form-group">
+      <%= f.label :status, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.select :status, Smartrent::Property.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
+      </div>
+    </div>
     <div class="field">
       <div class="form-group">
         <%= f.label :studio, :class => "col-md-2 control-label" %>
