--- a/app/views/smartrent/admin/settings/index.html.erb
+++ b/app/views/smartrent/admin/settings/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Listing Settings</h1>
 <div class="links pull-right">
   <%= link_to 'New Setting', new_admin_setting_path, :class => "btn btn-primary" %>
+  <%= link_to 'Run Monthly Awards Job Manually', run_monthly_awards_job_admin_settings_path, :class => "btn btn-default" %>
 </div>
 <br />
 <br />
